# allocation-agent

./: .env.example  .gitignore  AGENTS.md  APPLICATION_SUMMARY.md  CHROME_TABS_SUMMARY.md  CLAUDE.md  EXTERNAL_RESEARCH_STRATEGY.md  JD_STAR_README.md  QUICK_START.md  README.md  REDIS_SCHEMA_AND_API_FLOWS.md  SERPER_INTEGRATION.md  SYSTEM_SUMMARY.md  company_stack_lookup.py  demo_galaxy_match.py  example_integration.py  jd_star_integration.py  merge_intervals.py  nested_iterator.py  netlify.toml  package-lock.json  package.json  star_matcher.py  temporal_multisource_solutions.md  test_serper_lookup.py  webpage_indexer.py
allocation-agent-2.0/: .env.example  package-lock.json  package.json
docs/: API_INTEGRATION_ANALYSIS.md  BROWSER_PERMISSIONS_AND_ACCESS.md  QUICK_REFERENCE.md  README.md
runbooks/: AUTOMATION_README.md  EXTERNAL_RESEARCH_STRATEGY.md  FINCH_COMPETITIVE_ANALYSIS.md  JD_STAR_README.md  NON_STANDARD_PORTALS_SUMMARY.md  QUICK_START.md  SERPER_INTEGRATION.md  SMART_APPLY_GUIDE.md  SYSTEM_SUMMARY.md  analyze_galaxy_job.py  company_stack_lookup.py  finch_competitive_analysis.py  indexer_integration_example.py  job_seeds.json  package-lock.json  package.json  pi-tmux-dev.md  process_dandy_job.py  process_finch_job.py  test_serper_lookup.py
scripts/: aastha-jobs-list.md  answer-generator.mjs  apply-from-chrome-tabs.mjs  audit-access.mjs  auto-submit.mjs  batch-apply-aastha.mjs  (+20 more)
services/allocation-agent-workflow-service/: README.md  pyproject.toml
services/allocation-agent-workflow-service/allocation_agent_workflow/: __init__.py  interceptors.py
(+88 files in other folders)
